# sycl_image_processing

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt
app/: main.cpp
src/: main.cpp
